# game-of-life

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: Doxyfile
src/: CMakeLists.txt  game.cpp  game.hpp  main.cpp  physics.cpp  physics.hpp
